# NEXAH

./: .coverage  .coveragerc  .gitignore  CITATION.cff  LICENSE-DOCS.md  NAVIGATOR.MD  NAVIGATOR.md  NEXAH_ARCHITECTURE_COMPLETION_MAP.md  NEXAH_Engine_v1.0.0_Release_Notes.md  README.md  cfg_demo.dot  evolver_log.txt  hasse_chain.dot  navigator.md  nexah_kernel_report.json  pyproject.toml
APPLICATIONS/: README.md  lorenz_basin_zoom.py  lorenz_chaos_navigator.py  lorenz_density_map.py  lorenz_gradient_navigation.py  lorenz_regime_map.py  lorenz_resilience_map.py  lorenz_separatrix_dimension.py  lorenz_separatrix_zoom.py  lorenz_trajectory_on_landscape.py  lorenz_transition_channel.py  lorenz_visual_pipeline.py  nexah_lorenz_controller.py  readmeuu.md  run_navigation_demo.py
BUILDER_LAB/: README.md  auto_system_loader.py  nexah_capacity_cascade_engine.py  nexah_cascade_visualizer.py  nexah_cli.py  nexah_control_room.py  nexah_coupled_system_engine.py  nexah_dashboard.py  nexah_earth_simulator.py  nexah_global_cascade_dashboard.py  nexah_global_cascade_simulator.py  nexah_global_system_map.py  nexah_infrastructure_simulator.py  nexah_multisystem_dashboard.py  nexah_multisystem_engine.py  nexah_planetary_dashboard.py  nexah_planetary_engine.py  nexah_planetary_visualizer.py  nexah_system_generator.py  nexah_visualizer.py  run_builder_lab.py  system_template.py
DISCOVERY_ENGINE/: README.md  architecture_map.py  catastrophe_detector.py  evolution_visualizer.py  random_architecture_generator.py  resilience_3d_landscape.py  resilience_architecture_attractor_detector.py  (+23 more)
(+798 files in other folders)
