[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexah"
version = "0.5.0"
description = "NEXAH Engine – Finite Order Structural Stabilization Framework"
authors = [
    { name = "Thomas Hofmann" }
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["ENGINE*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
